--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,26 @@
 body {
     text-align: center;
     background: rgb(255, 255, 255);
-    background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(67, 70, 64, 1) 100%);
 }
 
 h1 {
     font-family: Monoton;
     font-size: 70px;
     margin: 0.2em;
+    text-shadow: 2px 2px 5px rgba(150, 150, 150, 1);
+}
+
+.toolSelect {
+    margin-left: 20%;
+    margin-right: 20%;
+    padding: 2%;
+    border-radius: 5px;
+    box-shadow: 0px 0px 6px 4px rgba(117, 117, 117, 0.35);
 }
 
 h2 {
     margin: 1em 0 0.25em;
+    text-shadow: 2px 2px 5px rgba(150, 150, 150, 1);
 }
 
 h2:first-of-type {
@@ -21,7 +30,7 @@ h2:first-of-type {
 table,
 tr,
 td {
-    border: 1px solid black;
+    border: 1px solid rgba(0, 0, 0, 0.61);
 }
 
 table {
@@ -42,12 +51,5 @@ input[type=number] {
 }
 
 #pixelCanvas {
-    background-color: white;
-}
-
-.box-click {
-  background-color: red;
-}
-.box-dbclick {
-  background-color: white;
+    background-color:white;
 }
